# DroneDesignMoo

./: README.md  environment.yml  pyproject.toml  setup.py
.github/: ci.yml
.github/workflows/: ci.yml
DroneDesignMoo/: constants.py  main.py  optimizer.py  postprocess.py  problem.py  run.ipynb  run.py  settings.py
notebooks/: drone_design_optimization.ipynb
tests/: test_core.py
